style: post icons alignment fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1101,15 +1101,28 @@ hr {
   .profile-username {
     flex-direction: column;
     align-items: flex-start;
+    height: 100%;
   }
   .profile-username h2 {
     line-height: 25px;
     max-width: 185px;
   }
-  .profile-username span {
+  .profile-username span,
+  button {
     width: 100%;
+
     margin: 10px 0 0 0;
     text-align: center;
+  }
+  .profile-username button {
+    background-color: #0095f6;
+    color: #ffffff;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    height: 30px;
+    font-size: 14px;
+    font-weight: 600;
   }
   .profile-username img {
     display: none;
